# nsbe-pdc2025-python-workshop

./: .gitignore  .pre-commit-config.yaml  00_getting_started.ipynb  pyproject.toml
01_module/: 01_chapter_exploratory_data_analysis.ipynb  01_exploratory_data_analysis.ipynb  02_chapter_targeted_web_scraping.ipynb  02_targeted_web_scraping.ipynb  FixJupyterKernelWin.py
01_module/.instructor/: 01_instructor_exploratory_data_analysis.ipynb  02_instructor_targeted_web_scraping.ipynb
02_module/: 01_ai_powered_data_cleaning.ipynb  01_chapter_ai_powered_data_cleaning.ipynb  02_ai_job_title_matching.ipynb  02_chapter_ai_job_title_matching.ipynb  03_chapter_data_integration_and_merge.ipynb  03_data_integration_and_merge.ipynb
02_module/.instructor/: 01_instructor_ai_powered_data_cleaning.ipynb  02_instructor_ai_job_title_matching.ipynb  03_instructor_data_integration_and_merge.ipynb
03_module/: 01_chapter_intro_to_streamlit.ipynb  01_intro_to_streamlit.ipynb  02_chapter_interactive_job_dashboard.ipynb  02_interactive_job_dashboard.ipynb  nbutils.py  package.json  tunnel.js
03_module/.instructor/: 01_instructor_intro_to_streamlit.ipynb  02_instructor_interactive_job_dashboard.ipynb
04_module/: 01_designing_ai_agent_tools.ipynb  02_assembling_agent_streamlit.ipynb
04_module/app/: ai_agent.py  tools.py
docs/Build Real World Tools with Python/: Build Real World Tools with Python.md
workshoplib/: pyproject.toml
workshoplib/src/workshoplib/: __init__.py  nbwidgets.py
