[project]
name = "nsbe-pdc2025-python-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "patchright>=1.52.5",
    "playwright>=1.54.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupytext>=1.17.2",
]

[tool.jupytext]
notebook_metadata_filter = "-kernelspec,-jupytext.text_representation.jupytext_version"
hide_notebook_metadata=true
